# claude-trading-bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  ERRATA.md  GOTCHAS.md  Makefile  README.md  START_HERE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtester/: backtester.py
chapters/: README.md
chapters/ch02-setup/: README.md
chapters/ch03-signals/: README.md
chapters/ch04-screener/: README.md
chapters/ch05-flow-trader/: README.md
chapters/ch06-backtester/: README.md
chapters/ch07-prediction-markets/: README.md
chapters/ch08-multi-agent/: README.md
chapters/ch09-risk/: README.md
chapters/ch10-go-live/: README.md
docs/: 01-setup.md  02-screener.md  03-flow-trader.md  04-backtester.md  05-prediction.md  06-multi-agent.md  07-risk.md  08-going-live.md  architecture.md  book-deviations.md  deviation-manifest.json  glossary.md  prompts.md  troubleshooting.md
examples/: 01_setup_gate.py  02_screener_watchlist.py  03_flow_trader_exits.py  04_backtest_verdict.py  05_prediction_edge.py  06_multi_agent_cycle.py  07_risk_gatekeeper.py  08_phase1_gate.py  README.md  _bootstrap.py
fixtures/: alpaca_state.json  daily_metrics_go.json  daily_metrics_hold.json  gamma_markets.json  historical_flow.csv  uw_darkpool_COIN.json  uw_flow_alerts.json  yfinance_prices.json  yfinance_sectors.json
fixtures/claude_responses/: flow_trader.json  multi_agent.json  prediction.json  screener.json
fixtures/scenarios/: edge_candidate.json  no_edge.json  overfit.json
flow_trader/: check_positions.py  flow_trader.py
multi_agent/: multi_agent.py
prediction/: calibration.py  kalshi_client.py  prediction_analyzer.py
prompts/: 01_mcp_connection_test.md  02_combined_stack_test.md  03_screener.md  04_flow_trader.md  05_backtester.md  06_walk_forward.md  07_prediction_analyzer.md  08_kalshi_client.md  09_live_data_estimates.md  10_multi_agent.md  11_risk_manager.md  12_tracking_infra.md
reference/: README.md
risk/: risk_manager.py
screener/: screener.py  tracker.py
setup/: test_alpaca.py  test_claude.py  verify_setup.py
templates/: 01_momentum_screener.py  02_mean_reversion.py  03_options_flow_follower.py  04_prediction_market_analyzer.py  05_multi_agent_config.py  README.md  parameter_cheat_sheet.md
tests/: conftest.py  test_book_deviations.py  test_cli_smoke.py  test_kalshi.py  test_safety.py  test_units.py  test_worked_examples.py
tools/: demo.py  generate_docs_charts.py
tracking/: __init__.py  calculate_metrics.py  phase1_assessment.py
utils/: __init__.py  offline.py  signals.py
